     newly exec'ed sshd will get the SIGALRM and not have a handler for it,
     and the default action will terminate the listening sshd.  Analysis and
     patch from andrew at gaul.org.
   - dtucker@cvs.openbsd.org 2007/02/22 12:58:40
     [servconf.c]
     Check activep so Match and GatewayPorts work together; ok markus@

20070219
  - (dtucker) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2007/01/10 13:23:22
     [ssh_config.5]
     do not use a list for SYNOPSIS;
     this is actually part of a larger report sent by eric s. raymond
     and forwarded by brad, but i only read half of it. spotted by brad.
   - jmc@cvs.openbsd.org 2007/01/12 20:20:41
     [ssh-keygen.1 ssh-keygen.c]
     more secsh -> rfc 4716 updates;
     spotted by wiz@netbsd
     ok markus
   - dtucker@cvs.openbsd.org 2007/01/17 23:22:52
     [readconf.c]
     Honour activep for times (eg ServerAliveInterval) while parsing
     ssh_config and ~/.ssh/config so they work properly with Host directives.
     From mario.lorenz@wincor-nixdorf.com via bz #1275.  ok markus@
   - stevesk@cvs.openbsd.org 2007/01/21 01:41:54
     [auth-skey.c kex.c ssh-keygen.c session.c clientloop.c]
     spaces
   - stevesk@cvs.openbsd.org 2007/01/21 01:45:35
     [readconf.c]
     spaces
   - djm@cvs.openbsd.org 2007/01/22 11:32:50
     [sftp-client.c]
     return error from do_upload() when a write fails. fixes bz#1252: zero
     exit status from sftp when uploading to a full device. report from
     jirkat AT atlas.cz; ok dtucker@
   - djm@cvs.openbsd.org 2007/01/22 13:06:21
     [scp.c]
     fix detection of whether we should show progress meter or not: scp
     tested isatty(stderr) but wrote the progress meter to stdout. This patch
     makes it test stdout. bz#1265 reported by junkmail AT bitsculpture.com;
     of dtucker@
   - stevesk@cvs.openbsd.org 2007/02/14 14:32:00
     [bufbn.c]
     typos in comments; ok jmc@
   - dtucker@cvs.openbsd.org 2007/02/19 10:45:58